Added maven build fix to pom